test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-11.xq
(:*************** $ ************* let * ne * eq *** for ***** eq ******** for * where ** ne ****:)
( ne : Test: K-ForExprPositionalVar-11                       :) where 
 where (:  for   Frans Englich                       for      :)
(: Date: 2006-10-05T18:29:37+02:00       foo         ne  foo for     for   :)
(: Purpose: let  Verifythat the position is  computed  ne for the empty sequence. :)
(:******************** where **** ne **** where ** let ******************** ne *:)
empty(for $fooi at$p in () return$p)